# projectwiki

./: .env.example  .gitignore  .npmignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pyproject.toml  start.sh
docs/: AI_ProjectWiki_First_Board_Blueprint.md  CODEX_TASKS.md  FEATURE_STATUS.md  first_board_design.md  ui_ux_guidelines.md  web_design.md
npm/: projectwiki.js  whywiki.js
projectwiki/: app.py  cli.py  config.py  db.py  models.py  runtime.py  utils.py
projectwiki/connectors/: git_repo.py  local_files.py
projectwiki/demo_project/: app.py
projectwiki/parsers/: __init__.py  base.py  code.py  docx.py  plaintext.py  xlsx.py
projectwiki/services/: ask.py  conflict_detector.py  handover.py  wiki_engine.py
projectwiki/static/: app.js  i18n.js  index.html  styles.css
tests/: test_api_surface.py  test_auth_api.py  test_basic_flow.py  test_collaboration_access.py  test_collaboration_api.py  test_collaboration_cli.py  test_collaboration_models.py  test_conflict_detector.py  test_demo_flow.py  test_evidence_outputs.py  test_no_demo_flow.py  test_npm_launcher.py  test_provider_accounts.py  test_provider_oauth.py  test_provider_permissions.py  test_provider_tokens.py  test_runtime_cli.py  test_schema_migration.py  test_start_script.py  test_web_assets.py  test_workspace_artifacts.py
whywiki/: app.py  cli.py  config.py  db.py  runtime.py
whywiki/collaboration/: __init__.py  accounts.py  artifacts.py  env.py  jsonio.py  models.py  oauth.py  providers.py  registry.py  tokens.py
whywiki/connectors/: base.py  local_files.py
whywiki/demo_project/: README.md
whywiki/parsers/: csv_parser.py  markdown.py  (+1 more)
(+29 files in other folders)
