[project]
name = "whywiki"
version = "0.1.0"
description = "Local-first project memory and AI-maintained wiki for messy software projects."
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.2",
    "python-docx>=1.1.0",
    "pypdf>=4.2.0",
    "keyring>=25.0"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28",
    "pytest>=8.2",
]

[project.scripts]
whywiki = "whywiki.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["whywiki*"]

[tool.setuptools.package-data]
whywiki = [
    "static/*.css",
    "static/*.html",
    "static/*.js",
]
